stuff controller deprication
in process of removing stuff-controller and replacing with page
controller.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--script src="scripts/jquery-serialization.js"></script-->
 <!--script src="scripts/jquery-ui.js"></script-->
 <script src="app/localStorage-controller.js"></script>
-<script src="app/stuff-controller.js"></script>
+<!--script src="app/stuff-controller.js"></script-->
 <script src="app/page-controller.js"></script>
 
 <!--script src="scripts/dialog-controller.js"></script-->
@@ -58,7 +58,8 @@
 
 <script>
 $(document).ready( function() {
-    stuffController().init($('#stuffPage'));
+    PageController();
+    //stuffController().init($('#stuffPage'));
 	//stuffController($('#stuffPage'));
 });
 
