Continued with JQuery refactor

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <script>
 $(document).ready( function() {
-     console.log('page = '+ $('#stuffPage'));
+     //console.log('page = '+ $('#stuffPage'));
     PageController($('#stuffPage'));
 	//x.initialize($('#stuffPage'));
     //stuffController().init($('#stuffPage'));
