Monday Morning Starbucks Session
performed troubleshooting and implemented a fix concerning alignment of
ther new record cancel button.

--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
 		<div class="id-cell">ID</div>
 		<div class="description-cell">Description of Stuff</div>
 	</div>
+	
 	<div class="row-container">
 		<div class="id-cell"></div> 
-		<div class="description-cell">
+		<div class="description-edit-cell">
 			<input type="text" id="newstuff" disabled="disbled" class="new-text-box" />
 		</div>
-		<div id="new-data-controls">
-			<button type="button" id="addnewstuff" value="New" class="edit-record-control">New</button>	
-			<!--button type="button" id="cancel-new-record" value="Cancel" class="edit-record-control">Cancel</button-->	
+		<div id="new-data-controls" class="data-control-container">
+			<button type="button" id="addnewstuff" value="New" class="new-record-control">New</button>	
+			<!--button type="button" id="cancel-new-record" value="Cancel" class="new-record-control">Cancel</button-->	
 		</div>
 	</div>
 	<div id="stuffList"> 
